k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: croplands
  labels:
    app: croplands
  annotations:
    field.cattle.io/projectId: "c-h587h:p-c5vsp"
